# ai_fitness_planner

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  database.py  main.py  models.py
backend/app/: main.py
backend/app/api/v1/: diet.py  user.py  workout.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  diet.py  user.py  workout.py
backend/app/schemas/: diet.py  user.py  workout.py
backend/app/services/: groq_client.py
backend/migration/: env.py
backend/migration/versions/: 4c85a81f19a5_initial_migration.py  6edd012b46f8_initial_database_migration.py
backend/routes/: diet.py  schemas.py  user.py  workout.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/pages/: Dashboard.tsx  Diet.tsx  Login.tsx  Signup.tsx  Workout.tsx
