[project]
name = "ai-fitness-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "bcrypt==4.2.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "ecdsa==0.19.0",
    "fastapi==0.115.8",
    "greenlet==3.1.1",
    "groq==0.18.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "passlib==1.7.4",
    "psycopg2==2.9.10",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "python-dotenv==1.0.1",
    "python-jose==3.4.0",
    "rsa==4.9",
    "setuptools==75.8.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.38",
    "starlette==0.45.3",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "wheel==0.45.1",
]
